Environment enum 추가 및 Environment 테스트 코드 작성 kotest 추가